--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,12 @@ ipch
 *.suo
 *.VC.db
 *.VC.VC.opendb
+*.vcxproj
+*.filters
+*.sln
+*.user
+bin/*
+bin-int/*
 
 ## Xcode artifacts
 project.xcworkspace
